Improvements :

* Bound MurmurHash assignment operator as Python copyFrom() method.

* Added python bindings for IECoreGL ToGLMeshPrimitiveConverter, ToGLCurvesPrimitiveConverter and ToGLPointsPrimitiveConverter.

* Added a ToGLConverter::create() factory method, for automatically creating a converter given an Object.

7.6.0 :

Improvements :

* changed MtoA Translater to be compatible with versions > 0.18.0 

* IECoreArnold::Renderer::shader() now additionally accepts shader names of the form "reference:nodeName", to allow shaders already in an ass file to be referenced by procedurals.

* The IECoreMaya::TransformationMatrixManipulator now draws an optional box if a ["UI"]["manipulatorBox"] user data item is present on the parameter.

* linearObjectInterpolation now supports the interpolation of Primitive classes.

Bug Fixes :

* Fixed crashes caused by null data in PrimitiveVariable::operator==.

7.5.0 :

Additions :

* Added the beginings of Alembic read support in contrib/IECoreAlembic.

Improvements :

* The Arnold output driver now supports the rendering of multiple outputs via a single driver. Channel names are prefixed with the arnold aov name so the may be distinguished.

* The MPlayDisplayDriver now supports multiple output planes, based on grouping channel names with common prefixes.

* Added python binding for the SearchPath copy constructor.

* The ClassLoader class now has a searchPath() method to provide access to the paths used to find classes.

* Refactored IECoreArnold converters to share a ToArnoldShapeConverter base class. Added bindings so that they may be used from python in conjunction with the arnold python bindings. Added a ToArnoldPointsConverter for dealing with points primitives. Added support for converting arbitrary primitive variables into Arnold user parameters.
